laboratorio/meu-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: meu-pod
spec:
  containers:
  - name: meu-container
    image: evertonagilar/webpage-blue:1.0.0
  imagePullSecrets:
  - name: docker-hub-secret
