laboratorio/nginx-tls.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
      - containerPort: 80
        name: http
      - containerPort: 443
        name: https
      volumeMounts:
      - name: nginx-config-vol
        mountPath: /etc/nginx/nginx.conf
        subPath: nginx.conf
      - name: nginx-tls
        mountPath: /etc/nginx/tls
      resources: 
        requests:
          cpu: '100m'
          memory: '64Mi'
        limits: 
          cpu: '200m'
          memory: '200Mi'
  volumes:
  - name: nginx-config-vol
    configMap:
      name: nginx-config
  - name: nginx-tls
    secret:
      secretName: meu-servico-tls-secret
      items:
        - key: tls.crt
          path: certificado.crt
        - key: tls.key
          path: chave-privada.key
