laboratorio/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-tls
  namespace: default
spec:
  ingressClassName: haproxy-ingress
  rules:
  - host: test.nginx.example.com
    http: 
      paths:   
      - backend:
          service:
            name: nginx
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: diploma.agilar.cloud
    http: 
      paths:
      - backend:
          service:
            name: nginx
            port: 
              number: 443
        path: /
        pathType: Prefix
