laboratorio/sistemas-cad-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sistemas-cad-ingress
  namespace: default
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /aluno
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 8080
      - path: /diploma
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 8080
  tls:
  - hosts:
    - app.meucluster.com
